Tighten the checkstyle rules and apply the needed changes